--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>숫자 맞추기 게임!</h1>
-    <div id="result-area">결과가 나온다</div>
-    <input type="number" id="user-input" />
-    <button id="play-button">Go!</button>
-
-    <script src="main.js"></script>
+    <div class="Container">
+      <div class="body-wrapper">
+        <h1>숫자 맞추기 게임!</h1>
+        <div id="result-area">결과가 나오개!!</div>
+        <div id="chance-area">남은 찬스 : 5번이개</div>
+        <input type="number" id="user-input" placeholder="1~100" />
+        <button id="play-button">Go!</button>
+        <button id="reset-button">Reset!</button>
+      </div>
+      <script src="main.js"></script>
+    </div>
   </body>
 </html>
